# embedded_programming

./: .gitignore  .nvimrc  CMakeLists.txt  README.md  TODO.txt  nvim_settings.lua  project.lua  project.txt
assets/: fconfig.ini
server/: CMakeLists.txt  main.c
server/database/: CMakeLists.txt  database.c  database.h
server/parser/: parser.c
server/server/: CMakeLists.txt  server.c  server.h
server/util/: configs.h  types.c  vector.h
sources/parser/: CMakeLists.txt  parser.h
sources/server/: server.c
sources/util/: CMakeLists.txt  types.h
test/: test.py
